Update 3.0.4